--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
           <input type="text" placeholder="Subtask">
         </div>
         <button><img src="icons/new-feature.png" alt=""></button>
-        
+      </div>
+      <div id="subtask-checkbox">
+        <input type="checkbox">
+        <p>Hello</p>
 
-        
+        <input type="checkbox">
+        <p>Placeholder</p>
+
       </div>
         <div id="action-buttons">
             <button id="clear_all">Clear All</button>
