--- a/index.html
+++ b/index.html
@@ -71,15 +71,27 @@
       <div class="right-section">
         <div id="column1" class="column">
           <h2>TO DO</h2>
-          <div id="todo-column"></div>
+          <div
+            id="todo-column"
+            ondrop="drop(event)"
+            ondragover="allowDrop(event)"
+          ></div>
         </div>
         <div id="column2" class="column">
           <h2>DOING</h2>
-          <div id="doing-column"></div>
+          <div
+            id="doing-column"
+            ondrop="drop(event)"
+            ondragover="allowDrop(event)"
+          ></div>
         </div>
         <div id="column3" class="column">
           <h2>DONE</h2>
-          <div id="done-column"></div>
+          <div
+            id="done-column"
+            ondrop="drop(event)"
+            ondragover="allowDrop(event)"
+          ></div>
         </div>
       </div>
     </div>
