--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
 
         <div id="action-buttons">
-          <button id="clear_all">Clear All</button>
+          <button id="clear_all" onclick="clearAll()">Clear All</button>
           <button id="create_card" onclick="createCard()">Create Card</button>
         </div>
       </div>
